# NFL-fantasy-drafting-helper

./: .gitignore  README.md  apply_formatting.bat  pyproject.toml  requirements.txt  run_flask.py  run_web.py  test_analytics.py  test_nfl_api.py
config/: config-settings.json  config.json  config_dynasty.json  config_example.json  config_redraft.json  config_superflex.json
configs/: config.json  config_dynasty.json  config_dynasty_multi_source.json  config_redraft.json  config_superflex.json  draft_strategy.json
data/: fantasy2025rankingsexcel.csv  idp_projections.csv  offense_projections.csv  projections_2025_offense_only.csv  projections_2025_wk0.csv  sleeper_adp.csv
docs/: AUTO_STRIKETHROUGH_README.md  CONFIGURABLE_STRATEGY.md  PROGRAMMATIC_SOLUTIONS_README.md  README.md  draft_board_macro.bas  manual_strikethrough_guide.md
docs/guides/: excel_strikethrough_guide.md
docs/macros/: vba_macro_code.txt
docs/roadmap/: ENHANCEMENT_ROADMAP.md  NFL_INTEGRATION_COMPLETE.md
examples/: integrate_nfl_data_example.py  nfl_integration_demo.py  nfl_integration_example.py  test_nfl_enhancement.py
output/: dynasty_multi_source_cheatsheet.xlsx  dynasty_multi_source_cheatsheet.xlsx.temp  dynasty_superflex_cheatsheet.xlsx.temp  dynasty_superflex_multi_cheatsheet.xlsx.temp  redraft_12team_cheatsheet.xlsx  redraft_12team_cheatsheet.xlsx.temp
scripts/: requirements.txt
scripts/batch/: generate_cheatsheet.bat  test_formatting.bat
scripts/core/: api_integrations.py  enhanced_fantasy_tool.py  injury_tracker.py  sleeper_cheatsheet.py
scripts/formatting/: add_strikethrough_formatting.py  auto_setup_formatting.py
scripts/run/: run_flask.py  run_flask_dashboard.bat  run_web_dashboard.bat
scripts/utilities/: check_name_variations.py  check_special_chars.py  create_macro_file.py  fix_strikethrough.py  test_normalization.py  test_strikethrough.py  try_xlwings.py
src/core/: nfl_data_integration.py  sleeper_cheatsheet.py  weather_analyzer.py
src/utils/: check_adp_status.py  check_excel_formatting.py  check_missing_adp.py  create_template.py  setup_excel_formatting.ps1
src/web/: README.md  app.py  run_dashboard.py
src/web/templates/: dashboard.html
tests/: test_config.py  test_config_direct.py
tools/: setup_formatting.bat
tools/batch/: setup_strikethrough.bat
