[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fantasy-drafting-helper"
version = "1.0.0"
description = "A comprehensive tool for generating optimized fantasy football draft cheat sheets"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Games/Entertainment :: Simulation",
]
dependencies = [
    "pandas>=1.5.0",
    "openpyxl>=3.0.0",
    "numpy>=1.21.0",
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "nfl-data-py>=0.3.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
    "flask-compress>=1.13",
]

[project.urls]
Homepage = "https://github.com/BarrsX/NFL-fantasy-drafting-helper"
Repository = "https://github.com/BarrsX/NFL-fantasy-drafting-helper"
Issues = "https://github.com/BarrsX/NFL-fantasy-drafting-helper/issues"

[project.scripts]
fantasy-draft = "src.web.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "numpy.*",
    "flask.*",
    "flask_cors.*",
    "nfl_data_py.*",
]
ignore_missing_imports = true
